chore: untrack docker, tests and postman files, add bkash payments
